# app/api/common/error.go
@@ -1,0 +1,6 @@
+package common
+
+// APIError is http error object.
+type APIError struct {
+	Message string `json:"message"`
+}
